# MarkovChains

./: .gitignore  MarkovChain.py  README.md  pyproject.toml
examples/: trading_example.py
src/markov_chains/: __init__.py  markov_chain.py  trading_model.py
src/markov_chains.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_markov_chain.py  test_trading_model.py
